<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/newNoteFragment">

    <fragment
        android:id="@+id/newNoteFragment"
        android:name="microblog.blackpiratex.com.NewNoteFragment"
        android:label="@string/nav_new_note"
        tools:layout="@layout/fragment_new_note" />

    <fragment
        android:id="@+id/postsFragment"
        android:name="microblog.blackpiratex.com.PostsFragment"
        android:label="Posts"
        tools:layout="@layout/fragment_posts">
        <action
            android:id="@+id/action_postsFragment_to_editPostFragment"
            app:destination="@id/editPostFragment" />
    </fragment>

    <fragment
        android:id="@+id/editPostFragment"
        android:name="microblog.blackpiratex.com.EditPostFragment"
        android:label="@string/nav_edit_post"
        tools:layout="@layout/fragment_edit_post">
        <argument
            android:name="postPath"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/queueFragment"
        android:name="microblog.blackpiratex.com.QueueFragment"
        android:label="Queue"
        tools:layout="@layout/fragment_queue" />

    <fragment
        android:id="@+id/infoFragment"
        android:name="microblog.blackpiratex.com.InfoFragment"
        android:label="@string/nav_info"
        tools:layout="@layout/fragment_info" />

</navigation>
